syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.justtest";
option java_outer_classname = "JustTestProto";
option objc_class_prefix = "WY";

package onlytest;

//定义服务
service Greeter {
    //注意：这里是returns 不是return
    rpc TestSomeThing (TestRequest) returns (TestResponse) {
    }
}
//定义消息类型
message TestRequest {
    string name = 1;
}
message TestResponse {
    string message = 1;
}